* Fix main product image overflow

--- a/public_html/includes/templates/default.catalog/less/app/product.less
+++ b/public_html/includes/templates/default.catalog/less/app/product.less
@@ -6,6 +6,7 @@
 
 #box-product {
   .main-image {
+    overflow: hidden;
     .sticker {
       color: #fff;
       font-size: 12px;
